test/Fail/Overlap1.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _12 : C Int Int
  Candidates
    [overlaps] CIa : {a : Set} → C Int a
    [overlaps] CaI : {a : Set} → C a Int
    (stuck)

Overlap1.agda:19.5-16: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Overlap1.agda:19.5-16
